content/docs/v2026.6.5-rc.1/guides/qdrant/scaling/vertical-scaling/overview.md
---
title: Qdrant Vertical Scaling Overview
menu:
  docs_v2026.6.5-rc.1:
    identifier: qdrant-vertical-scaling-overview
    name: Overview
    parent: qdrant-vertical-scaling
    weight: 10
menu_name: docs_v2026.6.5-rc.1
section_menu_id: guides
info:
  autoscaler: v0.50.0-rc.1
  cli: v0.65.0-rc.1
  dashboard: v0.41.0-rc.1
  installer: v2026.6.5-rc.1
  ops-manager: v0.52.0-rc.1
  product: kubedb
  provisioner: v0.65.0-rc.1
  schema-manager: v0.41.0-rc.1
  ui-server: v0.41.0-rc.1
  version: v2026.6.5-rc.1
  webhook-server: v0.41.0-rc.1
---

> New to KubeDB? Please start [here](/docs/v2026.6.5-rc.1/README).

# Vertical Scaling Qdrant

This guide will give you an overview of how KubeDB Ops Manager updates the resources(for example Memory, CPU etc.) of the `Qdrant`.

## Before You Begin

- You should be familiar with the following `KubeDB` concepts:
  - [Qdrant](/docs/v2026.6.5-rc.1/guides/qdrant/concepts/qdrant)
  - [QdrantOpsRequest](/docs/v2026.6.5-rc.1/guides/qdrant/concepts/opsrequest)

## How Vertical Scaling Process Works

The following diagram shows how the `KubeDB` Ops Manager used to update the resources of the `Qdrant`. Open the image in a new tab to see the enlarged version.

<figure align="center">
  <img alt="Vertical scaling process of Qdrant" src="/docs/v2026.6.5-rc.1/guides/qdrant/images/qdrant-vertical-scaling.png">
<figcaption align="center">Fig: Vertical scaling process of Qdrant</figcaption>
</figure>

The vertical scaling process consists of the following steps:

1. At first, a user creates a `Qdrant` CR.

2. `KubeDB` provisioner operator watches for the `Qdrant` CR.

3. When the operator finds a `Qdrant` CR, it creates a `PetSet` and related necessary stuff like secret, service, etc.

4. Then, in order to update the resources(for example `CPU`, `Memory` etc.) of the `Qdrant` cluster the user creates a `QdrantOpsRequest` CR with desired information.

5. `KubeDB` Ops Manager watches for `QdrantOpsRequest`.

6. When it finds one, it halts the `Qdrant` object so that the `KubeDB` provisioner operator doesn't perform any operation on the `Qdrant` during the scaling process.

7. Then the KubeDB Ops-manager operator will update resources of the PetSet's Pods to reach desired state.

8. After successful updating of the resources of the PetSet's Pods, the `KubeDB` Ops Manager updates the `Qdrant` object resources to reflect the updated state.

9. After successful updating of the `Qdrant` resources, the `KubeDB` Ops Manager resumes the `Qdrant` object so that the `KubeDB` Provisioner operator resumes its usual operations.

In the next doc, we are going to show a step-by-step guide on updating resources of Qdrant database using vertical scaling operation.
